--- a/app/src/main/res/layout/activity_edit_ads.xml
+++ b/app/src/main/res/layout/activity_edit_ads.xml
@@ -27,23 +27,18 @@
                 android:layout_marginEnd="5dp"
                 android:layout_marginStart="5dp" />
 
-            <SearchView
-                android:id="@+id/contrySearch"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginStart="5dp" />
-
-            <Spinner
-                android:id="@+id/spContry"
+            <TextView
+                android:id="@+id/tvCountry"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="5dp"
-                android:layout_marginStart="5dp"
+                android:layout_margin="5dp"
+                android:background="@android:drawable/editbox_background_normal"
+                android:gravity="center"
                 android:minHeight="48dp"
-                tools:ignore="SpeakableTextPresentCheck"
-                android:layout_margin="5dp" />
+                android:onClick="onClickSelectCountry"
+                android:padding="10dp"
+                android:text="@string/select_country"
+                android:textColor="@color/black" />
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
