--- a/app/src/main/res/layout/activity_edit_ads.xml
+++ b/app/src/main/res/layout/activity_edit_ads.xml
@@ -25,7 +25,9 @@
                 android:layout_height="200dp"
                 android:layout_margin="5dp"
                 android:layout_marginEnd="5dp"
-                android:layout_marginStart="5dp" />
+                android:layout_marginStart="5dp"
+                android:background="@android:drawable/editbox_background_normal"
+                android:padding="10dp" />
 
             <TextView
                 android:id="@+id/tvCountry"
@@ -38,6 +40,19 @@
                 android:onClick="onClickSelectCountry"
                 android:padding="10dp"
                 android:text="@string/select_country"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/tvCity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:background="@android:drawable/editbox_background_normal"
+                android:gravity="center"
+                android:minHeight="48dp"
+                android:onClick="onClickSelectCity"
+                android:padding="10dp"
+                android:text="@string/select_city"
                 android:textColor="@color/black" />
         </LinearLayout>
     </ScrollView>
