--- a/app/src/main/res/layout/activity_edit_ads.xml
+++ b/app/src/main/res/layout/activity_edit_ads.xml
@@ -50,10 +50,23 @@
                     android:onClick="onClickGetImages"
                     app:layout_constraintBottom_toBottomOf="@+id/vpImages"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.97"
                     app:layout_constraintStart_toStartOf="@+id/vpImages"
                     app:layout_constraintTop_toTopOf="@+id/vpImages"
+                    app:layout_constraintVertical_bias="0.0"
                     app:srcCompat="@android:drawable/ic_menu_edit"
                     tools:ignore="SpeakableTextPresentCheck" />
+
+                <ProgressBar
+                    android:id="@+id/pBarLoad"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/vpImages"
+                    app:layout_constraintStart_toStartOf="@+id/vpImages"
+                    app:layout_constraintTop_toTopOf="@+id/vpImages" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
