--- a/app/src/main/res/layout/list_image_frag.xml
+++ b/app/src/main/res/layout/list_image_frag.xml
@@ -9,6 +9,7 @@
         android:id="@+id/rcViewSelectImage"
         android:layout_width="409dp"
         android:layout_height="0dp"
+        android:background="@color/grey_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,10 +20,11 @@
         android:id="@+id/tb"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:background="@color/white"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:navigationIcon="?attr/homeAsUpIndicator"
+        android:theme="@style/ActionBarCustom"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="3dp" />
+        app:navigationIcon="?attr/homeAsUpIndicator" />
 </androidx.constraintlayout.widget.ConstraintLayout>
